# yt-dlgui

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  config.rs  main.rs  message.rs  settings.rs  theme.rs
src/components/: home.rs  mod.rs  settings_dialog.rs  title_bar.rs
src/download/: mod.rs  progress.rs  task.rs
src/widgets/: mod.rs  modal.rs
