[package]
name = "yt-dlgui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros"] }
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"